--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-﻿{
+{
   "name": "js-conditional-compile-loader",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A javascript conditional compile loader for webpack. 一个javascript条件编译的webpack loader。",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No test specified\" && exit 1"
+    "test": "jest",
+    "prepublish": "npm test"
   },
   "dependencies": {
   },
@@ -21,5 +22,9 @@
     "url": "http://www.hz300.com/js-conditional-compile-loader/"
   },
   "license": "MIT",
-  "readme": "readme.md"
+  "readme": "readme.md",
+  "devDependencies": {
+    "jest": "^24.8.0",
+    "loader-utils": "^1.2.3"
+  }
 }
