--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "js-conditional-compile-loader",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "A javascript conditional compile loader for webpack. 一个javascript条件编译的webpack loader。",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "prepublish": "npm test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "keywords": [
     "webpack",
     "javascript",
