--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prepublish": "npm test"
   },
   "dependencies": {
-    "loader-utils": "^2.0.0"
+    "loader-utils": "2.*"
   },
   "keywords": [
     "webpack",
